--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="grid grid-cols-3 gap-4 mb-6 text-center">
             <div class="bg-green-100 p-3 rounded-lg shadow-sm">
                 <p class="text-sm text-green-700 font-semibold">Income</p>
-                <span id="totalIncomeDisplay" class="text-xl font-bold text-green-800">$0.00</span>
+                <span id="totalIncomeDisplay" class="text-xl font-bold text-green-800">0.00</span>
             </div>
             <div class="bg-red-100 p-3 rounded-lg shadow-sm">
                 <p class="text-sm text-red-700 font-semibold">Expenses</p>
